--- a/teste.html
+++ b/teste.html
@@ -1,4 +1,5 @@
-<form action="http://127.0.0.1:5000/enviar_imagem" method="POST" enctype = "multipart/form-data">
+<form action="http://192.168.0.205:5000/enviar_imagem" method="POST" enctype = "multipart/form-data">
+    <input type="text" name="token" value="123456">
     <input type="file" name="file">
     <input type="submit" value="Enviar">
 </form>
